test/classes/initializers/generics/initAtomicsViaWrite.good
initAtomicsViaWrite.chpl:5: In initializer:
initAtomicsViaWrite.chpl:6: error: field "head" used before it is initialized
initAtomicsViaWrite.chpl:7: error: field "tail" used before it is initialized
